{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "ea563d2c-f8a3-4cfe-a845-ad7ba73ea435",
            "actions": [
                {
                    "name": "UpDown",
                    "type": "Button",
                    "id": "1ebfcd28-41a3-49e0-a5f0-129396fc9c1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftRight",
                    "type": "Button",
                    "id": "ac8a04c7-9bb7-47ef-a456-c1a0a4a10afe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePos",
                    "type": "PassThrough",
                    "id": "410e648a-27b4-4051-8019-7357e99abddf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDown",
                    "type": "Button",
                    "id": "f7599c8f-2c40-4b36-8395-9e9bae3d3bb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TakeBox",
                    "type": "Button",
                    "id": "08b1fe38-6646-4c34-b961-b9f7a33fc465",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "cb6cf591-c86e-454e-8833-25706a62750a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "060d4e4f-f974-4e02-88c1-8a1c9997c558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "UpDown",
                    "id": "cea5462b-b759-47d3-b85c-37cf2459918c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "58a44406-d5eb-4dfd-9304-43243061c685",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "7c585a06-18a0-45ce-8949-65d28ee47c76",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "a1521207-e76b-48ea-a8d9-e1e1b39d8a55",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5f9a04e1-3a50-40b3-a8fc-b01ad2f3c27c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "83cad8f7-3be2-4fa8-8845-c0d30b60dc72",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "02fbbc0e-41b2-4c0c-a9ed-3720483b2f24",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4138d7b1-f769-42cd-98d3-5568831c1047",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "674e5907-3420-4475-ae1f-55e385c22900",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeBox",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f43dbda6-7531-4832-a4b9-c8c97bfde357",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08c68728-87c6-4f7d-8fc8-fccaa82a3b95",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}